Fixes #30330 - Added word-wrap for description field

--- a/app/assets/stylesheets/foreman_remote_execution/job_invocations.scss
+++ b/app/assets/stylesheets/foreman_remote_execution/job_invocations.scss
@@ -26,3 +26,7 @@
     }
   }
 }
+
+.text_warp{
+  word-wrap: break-word;
+}
